--- a/test.html
+++ b/test.html
@@ -5,11 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./lib/Promise.js"></script>
+  <script src="./lib/Promise-es5.js"></script>
 </head>
 <body>
   <script>
-    new Promise
+    const p = new Promise((resolve, reject) => {
+      const time = Date.now();
+      if (time % 2 === 1) {
+        resolve(time)
+      } else {
+        reject(time)
+      }
+    })
+    console.log(p);
   </script>
 </body>
 </html>
